feat: Update Java version to 17
BREAKING CHANGE: Requires Java 17 as a minimum version